--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.1",
     "@douyinfe/semi-icons": "^2.35.0",
     "@douyinfe/semi-illustrations": "^2.35.0",
     "@douyinfe/semi-ui": "^2.35.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "ahooks": "^3.7.7",
+    "framer-motion": "^10.12.18",
     "i18next": "^22.5.0",
     "less": "^4.1.3",
     "react": "^18.2.0",
