--- a/package.json
+++ b/package.json
@@ -17,17 +17,27 @@
     "@douyinfe/semi-ui": "^2.35.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "ahooks": "^3.7.7",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "framer-motion": "^10.12.18",
     "i18next": "^22.5.0",
     "less": "^4.1.3",
+    "lucide-react": "^0.258.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
+    "@types/node": "^20.3.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
