--- a/package.json
+++ b/package.json
@@ -6,35 +6,45 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "api:generate": "openapi --input http://localhost:3000/api-json --output ./src/api --exportCore false",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.7.1",
-    "@douyinfe/semi-icons": "^2.35.0",
-    "@douyinfe/semi-illustrations": "^2.35.0",
-    "@douyinfe/semi-ui": "^2.35.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@tanstack/react-table": "^8.9.3",
+    "@uiw/react-md-editor": "^3.23.3",
     "ahooks": "^3.7.7",
     "class-variance-authority": "^0.6.1",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
+    "dayjs": "^1.11.9",
     "framer-motion": "^10.12.18",
     "i18next": "^22.5.0",
     "less": "^4.1.3",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-i18next": "^12.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
@@ -47,7 +57,9 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "openapi-typescript-codegen": "^0.25.0",
     "postcss": "^8.4.23",
+    "sass": "^1.63.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
