--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "i18next": "^22.5.0",
     "less": "^4.1.3",
     "lucide-react": "^0.258.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-toc-and-anchor": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -47,6 +49,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/markdown-it": "^13.0.0",
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
