--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@tanstack/react-table": "^8.9.3",
     "@uiw/react-md-editor": "^3.23.3",
     "ahooks": "^3.7.7",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "cos-js-sdk-v5": "^1.4.19",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.18",
     "i18next": "^22.5.0",
@@ -38,11 +40,15 @@
     "lucide-react": "^0.258.0",
     "markdown-it": "^13.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^12.3.1",
     "react-query": "^3.39.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.11.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
@@ -52,7 +58,9 @@
     "@types/markdown-it": "^13.0.0",
     "@types/node": "^20.3.3",
     "@types/react": "^18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
+    "@types/react-grid-layout": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
