--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^12.3.1",
     "react-query": "^3.39.3",
@@ -62,6 +63,7 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
     "@types/react-grid-layout": "^1.3.2",
+    "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
